fixed a font rendering error in blog's dark mode

--- a/blogs/style/common_styles_dark.css
+++ b/blogs/style/common_styles_dark.css
@@ -1,3 +1,11 @@
+@font-face {
+	font-family: 'open_sansregular';
+	src: url('../fonts/opensans-regular-webfont.woff2') format('woff2'),
+		 url('../fonts/opensans-regular-webfont.woff') format('woff');
+	font-weight: 400;
+	font-style: normal;
+}
+
 body {
 	line-height: 1.5;
 	background-color: #111;
@@ -8,7 +16,7 @@ div {
     zoom: 90%;
 	font-size: 16px;
 	font-weight: 400;
-	font-family: 'Open Sans', 'Helvetica', sans-serif;
+	font-family: 'open_sansregular', 'Helvetica', sans-serif;
 	font-style: normal;
 	max-width: 800px;
 	margin-left: auto;
